[tool.poetry]
name = "ts-forecast"
version = "0.1.0"
description = ""
authors = ["Thomas <thomas.oberliessen@googlemail.com>"]
readme = "README.md"
packages = [{ include = "ts_forecast" }]

[tool.poetry.dependencies]
python = "<3.12,>3.11"
jupyter = "^1.0.0"
pypsdm = "0.0.3"
pypsdml = { git = "https://github.com/ie3-institute/pypsdml.git", branch = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
